# sl_linux

./: .gitignore  CMakeLists.txt  generate.sh  make.sh  sl_bitmap.cpp  sl_bitmap.h  sl_button.cpp  sl_button.h  sl_event.cpp  sl_event.h  sl_img_button.h  sl_main.cpp  sl_range_dec_but.cpp  sl_range_dec_but.h  sl_range_inc_but.cpp  sl_range_inc_but.h  sl_res.h  sl_wnd.cpp  sl_wnd.h
src/: sl_constants.cpp  sl_constants.h  sl_defs.h  sl_engine.cpp  sl_engine.h  sl_geo.cpp  sl_geo.h  sl_main.cpp  sl_main_wnd.cpp  sl_main_wnd.h  sl_range_dec_but.cpp  sl_range_dec_but.h  sl_range_inc_but.cpp  sl_range_inc_but.h  sl_res.h  sl_settings_storage.cpp  sl_settings_storage.h  sl_target.h  sl_text_constants.cpp  sl_text_constants.h  sl_tools.cpp  sl_tools.h  sl_value_storage.cpp  sl_value_storage.h  sl_vessel_shape.cpp  sl_vessel_shape.h
src/buttons/: sl_dimmer_ext_button.cpp  sl_dimmer_ext_button.h  sl_dimmer_red_button.cpp  sl_dimmer_red_button.h  sl_harbour_mode_button.cpp  sl_harbour_mode_button.h  sl_light_off_button.cpp  sl_light_off_button.h  sl_light_on_button.cpp  sl_name_edit_button.cpp  sl_name_edit_button.h  sl_range_ext_button.cpp  sl_range_ext_button.h  sl_range_red_button.cpp  sl_range_red_button.h  sl_settings_button.cpp  sl_ui_button.cpp  sl_ui_button.h  sl_ui_switch_button.h
src/io/: sl_channel_host.cpp  sl_channel_host.h  sl_generic_channel.cpp  sl_generic_channel.h  sl_udp_channel.cpp  sl_udp_channel.h
src/nmea/: sl_gll_sentence.cpp  sl_gll_sentence.h  sl_hdt_sentence.h  sl_nmea_parser.cpp  sl_nmea_parser.h  sl_nmea_sentence.cpp  sl_nmea_sentence.h  sl_sentence_conwayer.cpp  sl_sentence_conwayer.h  sl_sentence_processor.cpp  sl_sentence_processor.h  sl_ttm_sentence.cpp  sl_ttm_sentence.h  sl_vdm_sentence.h
src/sdk/: sl_bitmap.cpp  sl_bitmap.h  sl_button.cpp  sl_button.h  sl_drawable.cpp  sl_drawable.h  sl_image_holder.h  sl_img_button.cpp  sl_img_button.h  sl_img_container.cpp  sl_img_container.h  sl_text.cpp  sl_text.h  sl_util.cpp  sl_util.h  sl_wnd.cpp  sl_wnd.h
src/ui/buttons/: sl_dimmer_ext_button.cpp  sl_dimmer_red_button.cpp  sl_harbour_mode_button.cpp  sl_light_off_button.cpp  sl_light_on_button.cpp  sl_light_on_button.h  sl_name_edit_button.cpp  sl_range_ext_button.cpp  sl_range_red_button.cpp  sl_scan_ext_button.cpp  sl_scan_ext_button.h  sl_scan_red_button.cpp  sl_scan_red_button.h  sl_settings_button.cpp  sl_settings_button.h  sl_ui_button.cpp  sl_ui_button.h  sl_ui_switch_button.h
src/ui/controls/: a.sh  sl_angle_value.cpp  sl_angle_value.h  sl_display.cpp  sl_display.h  sl_labeled_value.cpp  sl_labeled_value.h  sl_lamp_dir_indicator.cpp  sl_lamp_dir_indicator.h  sl_lamp_dir_indicators.cpp  sl_lamp_dir_indicators.h  sl_lamp_dist_indicators.cpp  sl_lamp_dist_indicators.h  sl_lamp_focus_indicators.cpp  sl_lamp_focus_indicators.h  sl_lamp_generic_indicators.cpp  sl_lamp_generic_indicators.h  sl_lamp_id_indicators.cpp  sl_lamp_id_indicators.h  sl_lamp_status_indicators.cpp  sl_lamp_status_indicators.h  sl_lamp_system_indicators.cpp  sl_lamp_system_indicators.h  sl_simple_value.cpp  sl_simple_value.h  sl_value.cpp  sl_value.h
src/ui/labels/: sl_red_label.cpp  sl_red_label.h  sl_value_field.cpp  sl_value_field.h
